fixed column on mobile design

--- a/css/index.css
+++ b/css/index.css
@@ -258,10 +258,7 @@ nav a {
 @media (max-width:500px) {
   .home .inverse-content {
     display: flex;
-    flex-direction: column;
-  }
-  .home .inverse-content .text-content {
-    order: 1;
+    flex-direction: column-reverse;
   }
 }
 .home .inverse-content .text-content {
@@ -275,6 +272,11 @@ nav a {
 .home .content-destination {
   width: 75%;
   margin: 0 auto 30px;
+}
+@media (max-width:500px) {
+  .home .content-destination {
+    width: 100%;
+  }
 }
 .home .content-destination img {
   border-radius: 10px;
